# edunexus-ai

./: .editorconfig  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .prettierignore  AGENTS.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
apps/ai-service/: environment.yml  main.py  pyproject.toml  requirements.txt
apps/ai-service/ai_service/: ai_service_pb2.py  ai_service_pb2.pyi  ai_service_pb2_grpc.py  app.py  chunking.py  config.py  errors.py  extraction.py  grpc_server.py  idempotency.py  kb.py  llm.py  models.py  prompts.py  repair.py  routing.py  utils.py  worker.py  worker_tasks_pb2.py  worker_tasks_pb2.pyi  worker_tasks_pb2_grpc.py
apps/ai-service/ai_service/providers/: __init__.py  base.py  gemini.py  ollama.py  openai_compat.py
apps/ai-service/ai_service/servicers/: __init__.py  ai_question.py  base.py  exercise_analysis.py  knowledge_base.py  lesson_plan.py  rag_chat.py
apps/ai-service/tests/: conftest.py  test_ai_output_validation.py  test_internal_auth.py  test_internal_contract.py  test_kb.py  test_lesson_plan_prompting.py  test_llm_policy.py  test_routing.py  test_runtime_policy.py
apps/api/: pom.xml
apps/api/src/main/resources/: application.yml  logback-spring.xml
apps/web/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
apps/web/src/: App.vue  main.js  main.ts
apps/web/src/app/guards/: auth.guard.ts
apps/web/src/app/providers/: query-state.ts
apps/web/src/app/router/: guard.ts  index.ts  meta.d.ts  routes.ts
apps/web/src/components/common/: AppErrorBoundary.vue  MarkdownPreview.vue  PaginationBar.vue  RoleWorkspaceLayout.vue
apps/web/src/composables/: useAsyncAction.ts  usePagination.ts
apps/web/src/pages/: AdminPage.vue  ForbiddenPage.vue  LoginPage.vue  NotFoundPage.vue  RegisterPage.vue  StudentPage.vue  TeacherPage.vue
apps/web/src/schemas/: admin.schemas.ts  auth.schemas.ts  teacher.schemas.ts
apps/web/src/services/: admin.service.ts  api-client.ts  api.js  api.ts  auth.service.ts  contracts.ts  error-message.ts  student.service.ts  teacher.service.ts
apps/web/src/stores/: admin.ts  aiq.ts  auth.js  auth.test.ts  auth.ts  chat.ts  exercise.ts  teacher.ts
apps/web/src/styles/: base.css  tokens.css
apps/web/src/types/: api.d.ts
doc/: 00-SSOT-总则.md  01-PRD-产品需求规格.md  02-需求追踪矩阵.md  03-用户流程与页面交互.md  04-领域模型与术语字典.md  05-数据模型与迁移规范.md  06-API契约-openapi.yaml  07-鉴权与权限模型.md  08-AI与RAG策略.md  09-配置与环境变量规范.md  10-开发约束与代码规范.md  11-验收清单与演示脚本.md  12-内部服务契约与异步任务规范.md  13-测试策略与质量门禁.md  14-前端实现规范与设计系统约束.md  openapi.yaml  readme.md
doc/old/: 旧学生端接口文档.md  旧学生端表结构.md  旧登录接口文档.md  旧软件开发与说明文档.md
scripts/: acceptance-smoke.ps1  acceptance-smoke.sh  format-all.ps1  format-all.sh  format-check.ps1  format-check.sh  regression-smoke.ps1  run-dev.ps1  run-dev.sh  stop-dev.ps1  stop-dev.sh
(+141 files in other folders)
