[project]
name = "edunexus-ai-service"
version = "1.0.0"
description = "EduNexus AI Service — RAG, LLM routing, embedding, and document processing"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.116.1",
    "uvicorn[standard]==0.35.0",
    "httpx==0.28.1",
    "numpy==2.2.2",
    "qdrant-client==1.17.0",
    "python-dotenv==1.1.1",
    "pypdf==5.5.0",
    "python-docx==1.2.0",
    "litellm>=1.60.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
