[project]
name = "edunexus-ai-service"
version = "1.0.0"
description = "EduNexus AI Service — RAG, LLM routing, embedding, and document processing"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi==0.116.1",
    "uvicorn[standard]==0.35.0",
    "httpx==0.28.1",
    "qdrant-client==1.17.0",
    "python-dotenv==1.1.1",
    "pypdf==5.5.0",
    "python-docx==1.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
